samples/_failures_safe/1761502778_49a539_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4fd2acef.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_4fd2acef.c:170:9: error: expected expression at end of input
  170 |         int right = parser_parse_term(
      |         ^~~
./samples/SAFE/__tmp_4fd2acef.c:170:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4fd2acef.c:170:9: error: expected declaration or statement at end of input
